@@ -16,10 +16,8 @@
 package io.gravitee.rest.api.service.impl;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThrows;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anySet;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
@@ -29,6 +27,7 @@ import io.gravitee.repository.management.api.EnvironmentRepository;
 import io.gravitee.repository.management.model.Environment;
 import io.gravitee.rest.api.model.*;
 import io.gravitee.rest.api.service.ApiHeaderService;
+import io.gravitee.rest.api.service.DashboardService;
 import io.gravitee.rest.api.service.MembershipService;
 import io.gravitee.rest.api.service.OrganizationService;
 import io.gravitee.rest.api.service.PageService;
@@ -45,7 +44,6 @@ import java.util.Optional;
 import java.util.Set;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -78,8 +76,11 @@ public class EnvironmentServiceTest {
     @Mock
     private MembershipService mockMembershipService;
 
+    @Mock
+    private DashboardService mockDashboardService;
+
     @AfterEach
-    public void afterEach() {
+    void afterEach() {
         GraviteeContext.cleanContext();
     }
 
@@ -87,19 +88,19 @@ public class EnvironmentServiceTest {
     class FindById {
 
         @Test
-        public void shouldFindByUserById() throws TechnicalException {
+        void shouldFindByUserById() throws TechnicalException {
             when(mockEnvironmentRepository.findById(any())).thenReturn(Optional.of(getEnvironment("envId", Arrays.asList("env1", "1env"))));
 
             EnvironmentEntity environment = cut.findById("envId");
 
-            assertNotNull(environment);
+            assertThat(environment).isNotNull();
         }
 
         @Test
-        public void shouldThrowAnError() throws TechnicalException {
+        void shouldThrowAnError() throws TechnicalException {
             when(mockEnvironmentRepository.findById(any())).thenReturn(Optional.empty());
 
-            assertThrows(EnvironmentNotFoundException.class, () -> cut.findById("envId"));
+            assertThatThrownBy(() -> cut.findById("envId")).isInstanceOf(EnvironmentNotFoundException.class);
         }
     }
 
@@ -107,7 +108,7 @@ public class EnvironmentServiceTest {
     class FindByOrgAndIdOrHridTest {
 
         @Test
-        public void shouldFindByOrgAndId() throws TechnicalException {
+        void shouldFindByOrgAndId() throws TechnicalException {
             Environment env1 = new Environment();
             env1.setId("envId");
             env1.setOrganizationId("org1");
@@ -122,7 +123,7 @@ public class EnvironmentServiceTest {
         }
 
         @Test
-        public void shouldFindByOrgAndHrid() throws TechnicalException {
+        void shouldFindByOrgAndHrid() throws TechnicalException {
             Environment env1 = new Environment();
             env1.setId("envId");
             env1.setOrganizationId("org1");
@@ -137,21 +138,20 @@ public class EnvironmentServiceTest {
         }
 
         @Test
-        public void shouldNotFind() throws TechnicalException {
+        void shouldNotFind() throws TechnicalException {
             when(mockEnvironmentRepository.findByOrganization(eq(GraviteeContext.getCurrentOrganization())))
                 .thenReturn(Collections.emptySet());
 
-            assertThrows(
-                EnvironmentNotFoundException.class,
-                () -> cut.findByOrgAndIdOrHrid(GraviteeContext.getCurrentOrganization(), "1env")
-            );
+            assertThatThrownBy(() -> cut.findByOrgAndIdOrHrid(GraviteeContext.getCurrentOrganization(), "1env"))
+                .isInstanceOf(EnvironmentNotFoundException.class);
         }
 
         @Test
-        public void shouldThrowAnError() throws TechnicalException {
+        void shouldThrowAnError() throws TechnicalException {
             when(mockEnvironmentRepository.findByOrganization(GraviteeContext.getCurrentOrganization())).thenReturn(getEnvironments());
 
-            assertThrows(IllegalStateException.class, () -> cut.findByOrgAndIdOrHrid(GraviteeContext.getCurrentOrganization(), "env1"));
+            assertThatThrownBy(() -> cut.findByOrgAndIdOrHrid(GraviteeContext.getCurrentOrganization(), "env1"))
+                .isInstanceOf(IllegalStateException.class);
         }
     }
 
@@ -159,7 +159,7 @@ public class EnvironmentServiceTest {
     class CreateTest {
 
         @Test
-        public void shouldCreateEnvironment() throws TechnicalException {
+        void shouldCreateEnvironment() throws TechnicalException {
             when(mockOrganizationService.findById(any())).thenReturn(null);
             when(mockEnvironmentRepository.findById(any())).thenReturn(Optional.empty());
 
@@ -174,7 +174,7 @@ public class EnvironmentServiceTest {
 
             EnvironmentEntity environment = cut.createOrUpdate("DEFAULT", "env_id", env1);
 
-            assertNotNull("result is null", environment);
+            assertThat(environment).isNotNull();
             verify(mockEnvironmentRepository, times(1))
                 .create(
                     argThat(arg ->
@@ -189,15 +189,16 @@ public class EnvironmentServiceTest {
             ExecutionContext executionContext = new ExecutionContext("DEFAULT", "env_id");
             verify(mockAPIHeaderService, times(1)).initialize(executionContext);
             verify(mockPageService, times(1)).initialize(executionContext);
+            verify(mockDashboardService, times(1)).initialize(executionContext);
         }
 
         @Test
-        public void shouldUpdateEnvironment() throws TechnicalException {
+        void shouldUpdateEnvironment() throws TechnicalException {
             when(mockOrganizationService.findById(any())).thenReturn(null);
             when(mockEnvironmentRepository.findById(any())).thenReturn(Optional.of(new Environment()));
 
             UpdateEnvironmentEntity env1 = new UpdateEnvironmentEntity();
-            env1.setHrids(Arrays.asList("envhrid"));
+            env1.setHrids(List.of("envhrid"));
             env1.setName("env_name");
             env1.setDescription("env_desc");
 
@@ -206,12 +207,12 @@ public class EnvironmentServiceTest {
 
             EnvironmentEntity environment = cut.createOrUpdate("DEFAULT", "env_id", env1);
 
-            assertNotNull("result is null", environment);
+            assertThat(environment).isNotNull();
             verify(mockEnvironmentRepository, times(1))
                 .update(
                     argThat(arg ->
                         arg != null &&
-                        arg.getHrids().equals(Arrays.asList("envhrid")) &&
+                        arg.getHrids().equals(List.of("envhrid")) &&
                         arg.getName().equals("env_name") &&
                         arg.getDescription().equals("env_desc") &&
                         arg.getOrganizationId().equals("DEFAULT")
@@ -221,13 +222,15 @@ public class EnvironmentServiceTest {
             ExecutionContext executionContext = new ExecutionContext("DEFAULT", "env_id");
             verify(mockAPIHeaderService, never()).initialize(executionContext);
             verify(mockPageService, never()).initialize(executionContext);
+            verify(mockDashboardService, never()).initialize(executionContext);
         }
 
         @Test
-        public void shouldHaveBadOrganizationExceptionWhenNoOrganizationInEntity() {
+        void shouldHaveBadOrganizationExceptionWhenNoOrganizationInEntity() {
             when(mockOrganizationService.findById("UNKNOWN")).thenThrow(new OrganizationNotFoundException("UNKNOWN"));
 
-            assertThrows(OrganizationNotFoundException.class, () -> cut.createOrUpdate("UNKNOWN", "env_id", new UpdateEnvironmentEntity()));
+            assertThatThrownBy(() -> cut.createOrUpdate("UNKNOWN", "env_id", new UpdateEnvironmentEntity()))
+                .isInstanceOf(OrganizationNotFoundException.class);
         }
     }
 
@@ -235,7 +238,7 @@ public class EnvironmentServiceTest {
     class GetDefaultOrInitializeTest {
 
         @Test
-        public void shouldReturnDefaultEnvironment() throws TechnicalException {
+        void shouldReturnDefaultEnvironment() throws TechnicalException {
             Environment existingDefault = new Environment();
             existingDefault.setId(GraviteeContext.getDefaultEnvironment());
             when(mockEnvironmentRepository.findById(eq(GraviteeContext.getDefaultEnvironment()))).thenReturn(Optional.of(existingDefault));
@@ -246,7 +249,7 @@ public class EnvironmentServiceTest {
         }
 
         @Test
-        public void shouldCreateDefaultEnvironment() throws TechnicalException {
+        void shouldCreateDefaultEnvironment() throws TechnicalException {
             when(mockEnvironmentRepository.findById(eq(GraviteeContext.getDefaultEnvironment()))).thenReturn(Optional.empty());
 
             EnvironmentEntity environment = cut.getDefaultOrInitialize();
@@ -259,18 +262,18 @@ public class EnvironmentServiceTest {
         }
 
         @Test
-        public void shouldCatchExceptionIfThrow() throws TechnicalException {
+        void shouldCatchExceptionIfThrow() throws TechnicalException {
             when(mockEnvironmentRepository.findById(eq(GraviteeContext.getDefaultEnvironment()))).thenThrow(new TechnicalException(""));
 
-            assertThrows(TechnicalManagementException.class, () -> cut.getDefaultOrInitialize());
+            assertThatThrownBy(() -> cut.getDefaultOrInitialize()).isInstanceOf(TechnicalManagementException.class);
         }
     }
 
     public Set<Environment> getEnvironments() {
         HashSet<Environment> envSet = new HashSet<>();
-        envSet.add(getEnvironment("envId", Arrays.asList("env1", "1env")));
-        envSet.add(getEnvironment("env2Id", Arrays.asList("env2", "2env")));
-        envSet.add(getEnvironment("env1", Arrays.asList("another_hrid")));
+        envSet.add(getEnvironment("envId", List.of("env1", "1env")));
+        envSet.add(getEnvironment("env2Id", List.of("env2", "2env")));
+        envSet.add(getEnvironment("env1", List.of("another_hrid")));
 
         return envSet;
     }
